--- a/.github/workflows/jenkins-ami.yml
+++ b/.github/workflows/jenkins-ami.yml
@@ -19,6 +19,14 @@ jobs:
         with:
           version: "latest"
 
+      - name: Packer format
+        id: fmt
+        run: "packer fmt ."
+
+      - name: Packer init
+        id: init
+        run: "packer init ."
+
       - name: Validate Packer template
         run: packer validate .
 
