--- a/.github/workflows/jenkins-ami.yml
+++ b/.github/workflows/jenkins-ami.yml
@@ -29,6 +29,11 @@ jobs:
 
       - name: Validate Packer template
         run: packer validate .
+      
+      - name: List files in the /tmp directory
+        run: |
+            ls -lah /tmp
+
 
       - name: Build AMI
         env:
