--- a/jenkins/Jcasc.yml
+++ b/jenkins/Jcasc.yml
@@ -2,7 +2,7 @@ jenkins:
   systemMessage: "Configured by Jenkins Configuration as Code for golang"
   securityRealm:
     local:
-      allowsSignup: true
+      allowsSignup: false
       users:
         - id: "admin"
           password: "admin"
@@ -21,30 +21,3 @@ jenkins:
       - git
       - workflow-aggregator
       - go
-  jobs:
-    - script: >
-        pipelineJob('Run Groovy Script') {
-          definition {
-            cps {
-              script('''
-                pipeline {
-                  agent any
-                  stages {
-                    stage('Run Groovy Script') {
-                      steps {
-                        script {
-                          def groovyScript = new File('/var/lib/jenkins/jenkins-setup.groovy')
-                          evaluate(groovyScript)
-                        }
-                      }
-                    }
-                  }
-                }
-              '''.stripIndent())
-              sandbox()
-            }
-          }
-        }
-  seedJobs:
-    - name: "Run Groovy Script"
-      scriptPath: "seed.groovy"
