--- a/.github/workflows/jenkins-ami.yml
+++ b/.github/workflows/jenkins-ami.yml
@@ -30,6 +30,11 @@ jobs:
       - name: Validate Packer template
         run: packer validate .
       
+      - name: Prepare JCasC file to change user credientials
+        run: |
+          sed -i 's/admin/${{ secrets.JENKINS_ADMIN_USER }}/g' jenkins/Jcasc.yml
+          sed -i 's/admin/${{ secrets.JENKINS_ADMIN_PASSWORD }}/g' jenkins/Jcasc.yml
+        shell: bash
 
       - name: Build AMI
         env:
