--- a/.github/workflows/jenkins-ami.yml
+++ b/.github/workflows/jenkins-ami.yml
@@ -34,6 +34,8 @@ jobs:
         run: |
           sed -i 's/ADMIN_USER/${{ secrets.JENKINS_ADMIN_USER }}/g' jenkins/jenkins.yaml
           sed -i 's/ADMIN_PASSWORD/${{ secrets.JENKINS_ADMIN_PASSWORD }}/g' jenkins/jenkins.yaml
+          sed -i 's/docker_hub_username/${{ secrets.docker_hub_username }}/g' jenkins/jenkins.yaml
+          sed -i 's/docker_hub_password/${{ secrets.docker_hub_password }}/g' jenkins/jenkins.yaml
         shell: bash
 
       - name: Build AMI
