--- a/.github/workflows/jenkins-ami.yml
+++ b/.github/workflows/jenkins-ami.yml
@@ -36,6 +36,11 @@ jobs:
           sed -i 's/ADMIN_PASSWORD/${{ secrets.JENKINS_ADMIN_PASSWORD }}/g' jenkins/jenkins.yaml
           sed -i 's/docker_hub_username/${{ secrets.docker_hub_username }}/g' jenkins/jenkins.yaml
           sed -i 's/docker_hub_password/${{ secrets.docker_hub_password }}/g' jenkins/jenkins.yaml
+          sed -i 's/git_repo_url/${{ secrets.git_repo_url }}/g' jenkins/jenkins.yaml
+          sed -i 's/git_repo_url/${{ secrets.git_repo_url }}/g' jenkins/build-docker-image.groovy
+          sed -i 's/git_token/${{ secrets.git_token }}/g' jenkins/jenkins.yaml
+
+ 
         shell: bash
 
       - name: Build AMI
