--- a/jenkins/jenkins.yaml
+++ b/jenkins/jenkins.yaml
@@ -43,4 +43,12 @@ credentials:
               secret: "git_token"  # Replace with your GitHub token or use Jenkins secrets
 
 jobs:
-  - file: ./build-docker-image.groovy
+  - script: >
+      pipelineJob('StaticSitePipeline') {
+          definition {
+              cps {
+                  script(readFileFromWorkspace('/var/lib/jenkins/build-docker-image.groovy'))
+                  sandbox()
+              }
+          }
+      }
