--- a/.github/workflows/jenkins-ami.yml
+++ b/.github/workflows/jenkins-ami.yml
@@ -32,12 +32,13 @@ jobs:
       
       - name: Prepare JCasC file to change user credientials
         run: |
-          sed -i 's/ADMIN_USER/'"${{ secrets.JENKINS_ADMIN_USER }}"'/g' jenkins/jenkins.yaml
-          sed -i 's/ADMIN_PASSWORD/'"${{ secrets.JENKINS_ADMIN_PASSWORD }}"'/g' jenkins/jenkins.yaml
-          sed -i 's/docker_hub_username/'"${{ secrets.docker_hub_username }}"'/g' jenkins/jenkins.yaml
-          sed -i 's/docker_hub_password/'"${{ secrets.docker_hub_password }}"'/g' jenkins/jenkins.yaml
-          sed -i 's/git_static_site_repo_url/'"${{ secrets.GIT_STATIC_SITE_REPO_URL }}"'/g' jenkins/build-docker-image.groovy
-          sed -i 's|${GITHUB_TOKEN}|'"$GITHUB_TOKEN"'|g' jenkins/jenkins.yaml
+          sed -i 's/ADMIN_USER/${{ secrets.JENKINS_ADMIN_USER }}/g' jenkins/jenkins.yaml
+          sed -i 's/ADMIN_PASSWORD/${{ secrets.JENKINS_ADMIN_PASSWORD }}/g' jenkins/jenkins.yaml
+          sed -i 's/docker_hub_username/${{ secrets.docker_hub_username }}/g' jenkins/jenkins.yaml
+          sed -i 's/docker_hub_password/${{ secrets.docker_hub_password }}/g' jenkins/jenkins.yaml
+          sed -i 's/git_static_site_repo_url/${{ secrets.GIT_STATIC_SITE_REPO_URL }}/g' jenkins/build-docker-image.groovy
+          sed -i 's|${GITHUB_TOKEN}|${{ secrets.GIT_TOKEN }}|g' jenkins/jenkins.yaml
+ 
         shell: bash
 
       - name: Build AMI
