update: jenkins DSL pipeline for docker image build 3

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -13,25 +13,25 @@ pipeline {
             }
         }
 
-        stage("clone static-site repo") {
-            steps {
-                echo "cloning the repo"
-                    withCredentials([usernamePassword(credentialsId: "${GIT_CREDENTIALS_ID}", passwordVariable: 'GIT_PASSWORD', usernameVariable: 'GIT_USERNAME')]) {
-                    sh '''
-                        git config --global credential.helper cache
-                        git config --global url.https://${GIT_TOKEN}@github.com/.insteadOf https://github.com/
-                        git clone --branch ${GIT_BRANCH} ${GIT_REPO}
-                    '''
-                }
-            }
-        }
+        // stage("clone static-site repo") {
+        //     steps {
+        //         echo "cloning the repo"
+        //             withCredentials([usernamePassword(credentialsId: "${GIT_CREDENTIALS_ID}", passwordVariable: 'GIT_PASSWORD', usernameVariable: 'GIT_USERNAME')]) {
+        //             sh '''
+        //                 git config --global credential.helper cache
+        //                 git config --global url.https://${GIT_TOKEN}@github.com/.insteadOf https://github.com/
+        //                 git clone --branch ${GIT_BRANCH} ${GIT_REPO}
+        //             '''
+        //         }
+        //     }
+        // }
         
         stage("build the caddy image and push") {
             steps {
                 echo "building the image"
                 withCredentials([usernamePassword(credentialsId: 'docker-hub-credentials-id', passwordVariable: 'PASS', usernameVariable: 'USER')]) {
                     sh '''
-                        docker build -t ram2305/caddy:3.0 -f static-site/Dockerfile static-site
+                        docker build -t ram2305/caddy:3.0 .
                         docker login -u $USER -p $PASS
                         docker push ram2305/caddy:3.0
                     '''
