--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -35,9 +35,9 @@ pipeline {
                 echo "Building the image"
                 withCredentials([usernamePassword(credentialsId: 'docker-hub-credentials-id', passwordVariable: 'PASS', usernameVariable: 'USER')]) {
                     sh '''
-                        docker build -t ram2305/caddy:4.0 -f static-site/Dockerfile static-site
+                        docker build -t ram2305/caddy:${BUILD_NUMBER} -f static-site/Dockerfile static-site
                         echo $PASS | docker login -u $USER --password-stdin
-                        docker push ram2305/caddy:4.0
+                        docker push ram2305/caddy:${BUILD_NUMBER}
                     '''
                 }
             }
