--- a/.github/workflows/jenkins-ami.yml
+++ b/.github/workflows/jenkins-ami.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   buildAmi:
+    if: github.repository == 'RamaRaju-personal-org/ami-jenkins' && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
 
     steps:
