--- a/.github/workflows/Conventional-Commits.yaml
+++ b/.github/workflows/Conventional-Commits.yaml
@@ -1,37 +1,17 @@
-name: "Commit Lint"
+name: Conventional Commits
 
 on:
   pull_request:
-    branches:
-      - main
-      
-    types:
-      - opened
-      - reopened
-      - labeled
-      - unlabeled
-      - edited
-      - synchronize
+    branches: [ main ]
 
 jobs:
-  commit-lint:
+  build:
+    name: Conventional Commits
     runs-on: ubuntu-latest
-    name: Validate all commits
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-        with:
-          token: ${{ secrets.PAT }} # your personal access token
-          fetch-depth: 0
+      - uses: actions/checkout@v3
 
-      - name: Fetch all branches
-        run: git fetch --all
-
-      - name: Conventional Commits Checker
-        uses: netodevel/conventional-commits-checker@v1.0.1
-        id: commits-check
+      - uses: webiny/action-conventional-commits@v1.3.0
         with:
-          # do not change the order of params
-          target-branch: ${{ github.event.pull_request.base.ref }} # required
-          current-branch: ${{ github.event.pull_request.head.ref }} # required
-          pattern: '(feat|fix|ci|chore|docs|test|style|refactor): .{1,}$' # optional
+          GITHUB_TOKEN: ${{ secrets.PAT }} # Optional, for private repositories.
+          allowed-commit-types: "feat,fix,chore,docs,style,refactor" # Optional, set if you want a subset of commit types to be allowed.
