--- a/.github/workflows/Conventional-Commits.yaml
+++ b/.github/workflows/Conventional-Commits.yaml
@@ -13,7 +13,12 @@ jobs:
 
       - name: Get recent commit message
         id: get_commit
-        run: echo "COMMIT_MSG=$(git log -1 --pretty=%B)" >> $GITHUB_ENV
+        run: |
+          COMMIT_MSG=$(git log -1 --pretty=%B)
+          if [[ "$COMMIT_MSG" =~ ^Merge ]]; then
+            COMMIT_MSG=$(git log -2 --pretty=%B | tail -1)
+          fi
+          echo "COMMIT_MSG=$COMMIT_MSG" >> $GITHUB_ENV
 
       - name: Check commit message format
         run: |
