--- a/.github/workflows/Conventional-Commits.yaml
+++ b/.github/workflows/Conventional-Commits.yaml
@@ -14,9 +14,11 @@ jobs:
       - name: Get recent commit message
         id: get_commit
         run: |
-          COMMIT_MSG=$(git log -1 --pretty=%B)
+          LATEST_COMMIT=$(git rev-parse HEAD)
+          COMMIT_MSG=$(git log -1 --pretty=%B $LATEST_COMMIT)
           if [[ "$COMMIT_MSG" =~ ^Merge ]]; then
-            COMMIT_MSG=$(git log -2 --pretty=%B | tail -1)
+            LATEST_COMMIT=$(git rev-parse HEAD~1)
+            COMMIT_MSG=$(git log -1 --pretty=%B $LATEST_COMMIT)
           fi
           echo "COMMIT_MSG=$COMMIT_MSG" >> $GITHUB_ENV
 
