--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "devDependencies": {
     "semantic-release": "^19.0.0",
-    "@semantic-release/git": "^10.0.0"
+    "@semantic-release/git": "^10.0.0",
+    "@semantic-release/changelog": "^6.0.1"
+
   }
 }
