--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,9 +17,10 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 20
-      - run: npm install
+      - run: npm ci
+      - run: npm run build
+      # - run: npm install
       - run: npx semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       
