--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "semantic-release": "^19.0.0",
     "@semantic-release/git": "^10.0.0",
-    "@semantic-release/changelog": "^6.0.1"
+    "@semantic-release/changelog": "^6.0.1",
+    "standard-version": "^9.3.2"
   }
 }
