--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: release-drafter/release-drafter@v6 #updates changelog.md
       - uses: actions/setup-node@v2
         with:
           node-version: 20
