--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,9 +18,9 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 20
-      # - run: npm ci
-      # - run: npm run build
-      - run: npm install
+      - run: npm ci
+      - run: npm run build
+      # - run: npm install
       - run: npx semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
