--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "ami-jenkins",
-  "version": "2.0.0",
-  "description": "added standard version This has code for installing jenkins on linux machine and creating an AMI",
+  "version": "1.0.0",
+  "description": "added standard version  This has code for installing jenkins on linux machine and creating an AMI",
   "main": "release.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "semantic-release": "^19.0.0",
-    "@semantic-release/git": "^10.0.0",
-    "@semantic-release/changelog": "^6.0.1",
-    "standard-version": "^9.3.2"
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^10.0.6",
+    "semantic-release": "^24.0.0"
   }
 }
