--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,13 +14,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: release-drafter/release-drafter@v6 #updates changelog.md
       - uses: actions/setup-node@v2
         with:
           node-version: 20
       - run: npm ci
-      - run: npm run build
-      # - run: npm install
+      # - run: npm run build
+      - run: npm install
       - run: npx semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
