--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
       - run: npm ci
       # - run: npm run build
       - run: npm install
-      - run: npx semantic-release --extends ./release.config.js
+      - run: npx semantic-release 
         env:
           GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
       
